tests/compile_fail/serialize_inference_view.stderr
error[E0277]: the trait bound `InferenceView<'_>: Serialize` is not satisfied
  --> tests/compile_fail/serialize_inference_view.rs:6:10
   |
6  | #[derive(Serialize)]
   |          ^^^^^^^^^ the trait `Serialize` is not implemented for `InferenceView<'_>`
   |
   = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)
